Merged User Service and Secure service